+ Ticket #5356, DVB: Support HEVC broadcasts
* Subtitle renderer: Better compatibility with ASS/SSA subtitle files that are slightly violating the specs
* Ticket #5294, Use internal LAV Splitter for demuxing WTV files
* Updated Little CMS to v2.7 (git dd0074b)
* Updated Unrar to v5.2.7
* Updated MediaInfoLib to v0.7.73
* Updated ZenLib to v0.4.31
* Updated SoundTouch to v1.8.0 r208
* Updated LAV Filters to v0.64.0.52:
    - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
    - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
    - Ticket #5299, LAV Video Decoder: Fix corrupted decoding of some HEVC files
    - Ticket #5330, LAV Video Decoder: Improve DVD subtitles timeout in some cases
    - Ticket #5333, LAV Splitter: Fix handling of some Blu-Ray playlist
* Updated Basque, British English, Catalan, Chinese (Simplified), Croatian, Czech, Dutch, Finnish, French,
  Galician, German, Greek, Hungarian, Italian, Japanese, Korean, Malay, Polish, Portuguese (Brazil), Romanian,
  Russian, Serbian, Slovak, Slovenian, Spanish, Swedish, Thai, Turkish, Ukrainian and Vietnamese translations
! EVR-CP/Sync renderers could produce wrong colors
! Do not mirror the status bar and the time indicator when using an RTL layout
! DVBSub: Fix a possible infinite loop when rendering corrupted subtitles
! Subfolders were sometimes parsed multiple times when drag-and-dropping a folder
! Haali Renderer: Fix XySubFilter support
! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
! Ticket #5183, Fix a rare crash when processing after playback event
! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
! Ticket #5241, Improve the handling of RTL layout for dockable bars (Playlist, Subresync, etc.)