@@ -26,9 +26,10 @@ next version - not released yet
 * Updated MediaInfoLib to v0.7.73
 * Updated ZenLib to v0.4.31
 * Updated SoundTouch to v1.8.0 r208
-* Updated LAV Filters to v0.64.0.52:
+* Updated LAV Filters to v0.65.0.7:
     - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
     - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
+    - LAV Audio Decoder: Support for native DTS-HD decoding using libdcadec
     - Ticket #5299, LAV Video Decoder: Fix corrupted decoding of some HEVC files
     - Ticket #5330, LAV Video Decoder: Improve DVD subtitles timeout in some cases
     - Ticket #5333, LAV Splitter: Fix handling of some Blu-Ray playlist
